// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > matches default variant 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-bYgEKt giTbGw aje-multiselect sc-ikBzZv eKosIW aje-multiselect aje-multiselect--default is-medium"
  >
    <label
      class="sc-dkXsAU bCsPXP"
      id="react-aria-:r3:"
    >
      label
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7: react-aria-:r3:"
      class="sc-krVzYl ecatrr aje-btn aje-btn--dropdown is-medium"
      id="react-aria-:r2:"
      tabindex="0"
      type="button"
    >
      <span
        class="sc-jJwPsw jrTTIZ"
      >
        Select an option
      </span>
      <i
        aria-hidden="true"
        class="sc-bqqMSY cFveTB aje-icon material-icons is-medium"
        style="margin-left: auto;"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > matches floating variant 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-bYgEKt giTbGw aje-multiselect sc-ikBzZv eKosIW aje-multiselect aje-multiselect--floating is-medium aje-multiselect--floating"
  >
    <div
      class="sc-ezjgic inJFVa"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="react-aria-:rf: react-aria-:rb:"
        class="sc-krVzYl ecatrr aje-btn aje-btn--dropdown is-medium"
        id="react-aria-:ra:"
        tabindex="0"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-bqqMSY cFveTB aje-icon material-icons is-medium"
          style="margin-left: auto;"
        >
          arrow_drop_down
        </i>
      </button>
      <label
        class="sc-dkXsAU bCsPXP"
        id="react-aria-:rb:"
      >
        label
      </label>
    </div>
  </div>
</DocumentFragment>
`;
